--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
 .map {
   height: 100%;
   width: 100%;
+  display: none; /* Hide initial map */
+}
+
+.map.active {
+  display: block; /* Show selected map */
 }
 
 /* LEGEND STYLING */
