--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
 }
 
 /* LEGEND STYLING */
-.legend {
+.legend,
+.healthRiskLegend {
   background: white;
   line-height: 1.2;
   padding: 5px;
@@ -32,13 +33,15 @@
   color: #333;
 }
 
-.legend h4 {
+.legend h4,
+.healthRiskLegend h4 {
   margin: 0 0 5px;
   font-weight: bold;
   font-size: 14px;
 }
 
-.legend i {
+.legend i,
+.healthRiskLegend i {
   width: 14px;
   height: 14px;
   float: left;
@@ -46,7 +49,8 @@
   opacity: 0.7;
 }
 
-.legend span {
+.legend span,
+.healthRiskLegend span {
   display: block;
   margin-bottom: 3px;
 }
