--- a/style.css
+++ b/style.css
@@ -22,7 +22,19 @@
 }
 
 /* LEGEND STYLING */
-.legend,
+.legend {
+  background: white;
+  line-height: 1.2;
+  padding: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  font-size: 12px;
+  color: #333;
+  width: 200px;
+  height: 300px;
+  overflow: scroll;
+}
+
 .healthRiskLegend,
 .healthOutcomesLegend,
 .screeningRatesLegend,
@@ -34,6 +46,8 @@
   border-radius: 5px;
   font-size: 12px;
   color: #333;
+  width: 200px;
+  height: 300px;
 }
 
 .legend h4,
