--- a/style.css
+++ b/style.css
@@ -6,85 +6,30 @@
   padding: 0;
 }
 
+/* Hide leaflet control scroll bar */
+.leaflet-control-layers-list {
+  overflow: hidden;
+}
+
+/* ================================================================== MAP STYLING ================================================================== */
 #map-container {
   height: calc(100vh - 50px);
   position: relative;
 }
 
+/* Styles for all maps, hidden by default */
 .map {
   height: 100%;
   width: 100%;
-  display: none; /* Hide initial map */
+  display: none;
 }
 
+/* Show selected map */
 .map.active {
-  display: block; /* Show selected map */
-}
-
-/* LEGEND STYLING */
-.legend {
-  background: white;
-  line-height: 1.2;
-  padding: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  font-size: 12px;
-  color: #333;
-  width: 200px;
-  height: 300px;
-  overflow: scroll;
-}
-
-.healthRiskLegend,
-.healthOutcomesLegend,
-.screeningRatesLegend,
-.healthStatusLegend {
-  background: white;
-  line-height: 1.2;
-  padding: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  font-size: 12px;
-  color: #333;
-  width: 200px;
-  height: 300px;
-}
-
-.legend h4,
-.healthRiskLegend h4,
-.healthOutcomesLegend h4,
-.screeningRatesLegend h4,
-.healthStatusLegend h4 {
-  margin: 0 0 5px;
-  font-weight: bold;
-  font-size: 14px;
-}
-
-.legend i,
-.healthRiskLegend i,
-.healthOutcomesLegend i,
-.screeningRatesLegend i,
-.healthStatusLegend i {
-  width: 14px;
-  height: 14px;
-  float: left;
-  margin-right: 5px;
-  opacity: 0.7;
-}
-
-.legend span,
-.healthRiskLegend span,
-.healthOutcomesLegend span,
-.screeningRatesLegend span,
-.healthStatusLegend span {
   display: block;
-  margin-bottom: 3px;
 }
 
-.leaflet-control-layers-list {
-  overflow: hidden;
-}
-
+/* ================================================================== MAP BUTTON STYLING ================================================================== */
 .mapSelectBtn {
   background-color: #32cd32;
   color: white;
@@ -105,4 +50,68 @@
 .mapSelectBtn:active {
   background-color: #006400;
   transform: translateY(2px);
+}
+
+/* ================================================================== LEGEND STYLING ================================================================== */
+/* Legend styles for language and demographic data */
+.legend {
+  background: white;
+  line-height: 1.2;
+  padding: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  font-size: 12px;
+  color: #333;
+  width: 200px;
+  height: 300px;
+  overflow: scroll;
+}
+/* Legend styles for health data */
+.healthRiskLegend,
+.healthOutcomesLegend,
+.screeningRatesLegend,
+.healthStatusLegend {
+  background: white;
+  line-height: 1.2;
+  padding: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  font-size: 12px;
+  color: #333;
+  width: 200px;
+  height: 300px;
+}
+
+/* Legend heading styles */
+.legend h4,
+.healthRiskLegend h4,
+.healthOutcomesLegend h4,
+.screeningRatesLegend h4,
+.healthStatusLegend h4 {
+  margin: 0 0 5px;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+/* Legend icon styles */
+.legend i,
+.healthRiskLegend i,
+.healthOutcomesLegend i,
+.screeningRatesLegend i,
+.healthStatusLegend i {
+  width: 14px;
+  height: 14px;
+  float: left;
+  margin-right: 5px;
+  opacity: 0.7;
+}
+
+/* Legend text styles */
+.legend span,
+.healthRiskLegend span,
+.healthOutcomesLegend span,
+.screeningRatesLegend span,
+.healthStatusLegend span {
+  display: block;
+  margin-bottom: 3px;
 }
